--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mkcert": "^3.2.0",
+    "socket.io": "^4.7.5"
   },
   "name": "webrtc",
   "version": "1.0.0",
